...
//

// MARK: - PublicCredentialVerificationView
"PublicCredentialVerificationView.HeaderLabel" = "Log in";
"PublicCredentialVerificationView.PublicCredentialTextInput" = "Enter email, mobile, or username";
"PublicCredentialVerificationView.ForgotPublicCredentialButton" = "Forgotten your email?";
"PublicCredentialVerificationView.NextButton" = "Continue";

// MARK: - RememberedPasswordLoginView
"RememberedPasswordLoginView.HeaderLabel" = "Log in";
"RememberedPasswordLoginView.ChangeButton" = "Edit";
"RememberedPasswordLoginView.PasswordTextInput" = "Password";
"RememberedPasswordLoginView.ForgotPasswordButton" = "Forgot password?";
...
